[gd_scene load_steps=6 format=3 uid="uid://b6qoekm87f253"]

[ext_resource type="Script" path="res://WinMenu.gd" id="1_sk4rj"]
[ext_resource type="Theme" uid="uid://c4jjocbci4vgw" path="res://resources/uiTheme.tres" id="2_70eg7"]
[ext_resource type="AudioStream" uid="uid://bp7wq7acweege" path="res://assets/music/Text 1.wav" id="3_g3f58"]
[ext_resource type="AudioStream" uid="uid://db02ltt171xng" path="res://assets/music/Select 1.wav" id="4_gh3ru"]
[ext_resource type="AudioStream" uid="uid://crcg44g7of5wa" path="res://assets/music/microwave-end-sound-98680.mp3" id="5_uo7sv"]

[node name="WinMenu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 64.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_sk4rj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_70eg7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WinTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_70eg7")
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_shadow_color = Color(0.294118, 0.717647, 0.403922, 1)
text = "Winner"
horizontal_alignment = 1

[node name="Play_Again" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../Main_Menu")
focus_neighbor_bottom = NodePath("../Main_Menu")
focus_next = NodePath("../Main_Menu")
focus_previous = NodePath("../Main_Menu")
mouse_filter = 2
text = "Play Again"

[node name="Main_Menu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../Play_Again")
focus_neighbor_bottom = NodePath("../Play_Again")
focus_next = NodePath("../Play_Again")
focus_previous = NodePath("../Play_Again")
mouse_filter = 2
text = "Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g3f58")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gh3ru")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_uo7sv")
volume_db = -1.0
pitch_scale = 1.2

[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/Play_Again" to="." method="_on_play_again_focus_exited"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_focus_exited"]
